# api/campaigns.js
@@ -7,49 +7,27 @@ var trace = require('util')
 var debug = require('debug')('imock:server:api:list')
 var express = require('express')
 var redis = require('redis')
+var util = require('../util')
 var router = express.Router()
 
 // List of campaigns
 router.get('/', function (req, res, next) {
     var client = req.app.locals.redis
 
-    var campaign = req.originalUrl.match(/\/api\/campaigns\/(.*)/)[1]
+    var campaign = req.baseUrl.match(/\/api\/campaigns\/(.*)/)[1]
 
     // Sort in ascending order
-    client.sort('/api/groups/' + campaign, 'ALPHA', function (err, list) {
+    client.sort('/api/campaigns/' + campaign, 'ALPHA', function (err, list) {
         if (err) {
-            sendBody(req, res, 500, '{"code": "ECHEC", "message": "List not found"}')
+            util.sendBody(req, res, 500, 'ECHEC', 'List not found')
         } else {
             if (list.length > 0) {
-                sendBody(req, res, 200, JSON.stringify(list))
+                util.sendBody(req, res, 200, JSON.stringify(list))
             } else {
-                sendBody(req, res, 404, '{"code": "ECHEC", "message": "Empty list"}')
+                util.sendBody(req, res, 404, 'ECHEC', 'Empty list')
             }
         }
     })
 })
-
-/**
- * 
- * Return response to consumers
- * 
- * @param {object} req
- * @param {object} res
- * @param {string} status
- * @param {string} body
- */
-function sendBody(req, res, status, body) {
-    // Headers
-    if (req.app.get('env') != 'production') {
-        res.set('Access-Control-Allow-Origin', '*')
-    }
-    res.set('X-Powered-By', 'Intelligent Mock <!/^.*$/!>')
-    res.set('Content-Type', 'application/json; charset=UTF-8')
-    res.set('Cache-Control', 'public, max-age=0')
-
-    res.status(status)
-
-    res.send(body)
-}
 
 module.exports = router
